# ReDynELA_1

./: DEVLOG.txt  LICENSE
Sources/Applications/DynELA_solve/: CMakeLists.txt  element.cpp
Sources/Libraries/: CMakeLists.txt
Sources/Libraries/basicTools/: Boolean.h  Configuration.h  Const.h  LogFile.C  LogFile.h  ObjectList.h  Picture.h  SampleArchive.h  String_.C  Timer.h  basicTools.h
Sources/Libraries/finiteElement/: Domain.C  Element.C  ExplicitSolver.C  ExplicitSolverCH.C  Jobs.h  Select.C  Solver.C  Solver.h  Structure.C
Sources/Libraries/lapack/Lapack/: dsecnd.c
Sources/Libraries/lapack/libF77/: dtime_.c  etime_.c
Sources/Libraries/linearAlgebra/: CMakeLists.txt
Sources/Libraries/lsdyna/: CMakeLists.txt  lsdynaReader.C  lsdynaReader.h
