FILE(GLOB SRCS *.h *.C)

ADD_LIBRARY(lsdyna ${SRCS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Include of previous directories
# INCLUDE_DIRECTORIES(${SOURCE_LIBRARY_DIRECTORY}/basicTools ${SOURCE_LIBRARY_DIRECTORY}/lapack)

# TARGET_LINK_LIBRARIES(lsdyna lapack )

SOURCE_GROUP(base             REGULAR_EXPRESSION ".*\\.(C|i|h)")
SOURCE_GROUP(generated        REGULAR_EXPRESSION ".*\\.(cxx|py)")
